[package]
name = "stackful"
version = "0.1.4"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nbdd0121/stackful"
description = "Bridge between sync and async"

[dependencies]
futures-executor = { version = "0.3.5", optional = true }
stacker = { git = "https://github.com/nbdd0121/stacker.git", optional = true }

[target.'cfg(not(any(target_arch = "wasm32", windows)))'.dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
async-std = { version = "1.6", features = ["unstable"] }

[dev-dependencies]
futures = "0.3.5"
byteorder = "1.3"

[features]
future = ["futures-executor"]
nightly = []
default = ["future"]
